<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent">

	<HorizontalScrollView
		android:layout_width="match_parent"
		android:layout_height="wrap_content">
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content">
			<Button
				android:id="@+id/b_1"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/map_controller1"/>
			<Button
				android:id="@+id/b_2"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/map_controller2"/>
			<Button
				android:id="@+id/b_3"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/map_controller3"/>
			<Button
				android:id="@+id/b_4"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/map_controller4"/>
			<Button
				android:id="@+id/b_5"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/map_controller5"/>
			<Button
				android:id="@+id/b_6"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/map_controller6"/>
			<Button
				android:id="@+id/b_7"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/map_controller7"/>
			<Button
				android:id="@+id/b_8"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/map_controller8"/>
			<Button
				android:id="@+id/b_9"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/map_controller9"/>
			<Button
				android:id="@+id/b_10"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/map_controller10"/>
			<Button
				android:id="@+id/b_11"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/map_controller11"/>
			<Button
				android:id="@+id/b_12"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/map_controller12"/>
		</LinearLayout>
	</HorizontalScrollView>

	<com.baidu.mapapi.map.MapView
		android:id="@+id/mv_map"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:clickable="true"/>
</LinearLayout>

